Fixed issue with circle misalignment

--- a/budget-app-frontend/src/components/CalendarPage/CalendarPageSideBar.css
+++ b/budget-app-frontend/src/components/CalendarPage/CalendarPageSideBar.css
@@ -39,6 +39,7 @@
     width: 160px;
     height: 160px;
     transition: 0.3s;
+    vertical-align: top;
 }
 
 .CSideBar-input:hover {
